# sentinel-log-ai

./: .dockerignore  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml  setup-sentinel-log-ai.ps1
.github/workflows/: ci.yml  release.yml
cmd/agent/: main.go
cmd/agent/cmd/: ingest.go  ingest_test.go  ml.go  root.go
demo/: README.md  demo_logs.jsonl  demo_ml_vs_regex.py
docs/: README.md  architecture.md  data-flow.md  demo.md  error-handling.md  evaluation.md  logging.md  packaging.md  threat-model.md  troubleshooting.md
internal/batch/: processor.go  processor_test.go
internal/errors/: errors.go  errors_test.go
internal/grpcclient/: client.go  client_test.go
internal/ingestion/: source.go  source_test.go
internal/logging/: logging.go  logging_test.go
internal/models/: log_record.go  log_record_test.go
internal/parser/: parser.go  parser_test.go
proto/: buf.yaml
proto/ml/v1/: ml_service.pb.go  ml_service.proto  ml_service_grpc.pb.go
python/sentinel_ml/: __init__.py  clustering.py  config.py  embedding.py  exceptions.py  llm.py  logging.py  models.py  normalization.py  novelty.py  parser.py  preprocessing.py  server.py  vectorstore.py
python/sentinel_ml/alerting/: __init__.py  base.py  email.py  github.py  health.py  router.py  slack.py  watch.py  webhook.py
python/sentinel_ml/benchmark/: __init__.py  datasets.py  metrics.py  profiler.py  runner.py
python/sentinel_ml/cli/: __init__.py  config_cmd.py  console.py  formatters.py  profiler.py  progress.py  report.py  themes.py
python/sentinel_ml/evaluation/: __init__.py  ablation.py  golden_dataset.py  labeling.py  metrics.py  report.py
python/sentinel_ml/packaging/: __init__.py  build.py  changelog.py  installer.py  release.py  version.py
python/sentinel_ml/security/: __init__.py  encryption.py  privacy.py  redaction.py
python/sentinel_ml/storage/: __init__.py  bundle.py  retention.py  snapshot.py  versioning.py
tests/python/: conftest.py  test_alerting.py  test_benchmark.py  test_cli.py  test_clustering.py  test_config.py  test_embedding.py  test_evaluation.py  test_evaluation_integration.py  test_exceptions.py  test_llm.py  test_logging.py  test_m2_integration.py  test_models.py  test_normalization.py  test_novelty.py  test_packaging.py  test_parser.py  test_preprocessing.py  test_preprocessing_service.py  test_security.py  test_server.py  test_storage.py  test_vectorstore.py
wiki/: Architecture-Overview.md  CLI-UX.md  Configuration-Reference.md  Contributing.md  Design-Patterns.md  Error-Codes.md  Evaluation-Guide.md  FAQ.md  Home.md  Packaging-Guide.md  Quick-Start.md  Security-Guide.md  Testing-Guide.md  _Footer.md  _Sidebar.md
